--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+
+<link
+rel="stylesheet"
+href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.6.6/css/flag-icons.min.css"
+/>
   <meta charset="utf-8" />
   <title>Ionic App</title>
 
