--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
 <head>
 
 <link
-rel="stylesheet"
-href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.6.6/css/flag-icons.min.css"
-/>
+rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.6.6/css/flag-icons.min.css"/>
   <meta charset="utf-8" />
   <title>Ionic App</title>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOVYRIgupAurZup5y1PRh8Ismb1A3lLao&libraries=places&callback=initMap"></script> -->
+
 
   <base href="/" />
 
